# trilobyte

./: .gitignore  Dockerfile  Dockerfile.local  Dockerfile.rpi  README.md  bashrc  launch_dds_agent.sh
docs/trilobyte-schematic/: trilobyte-schematic.kicad_prl  trilobyte-schematic.kicad_pro  ~trilobyte-schematic.kicad_sch.lck
ldlidar_stl_ros2/ldlidar_driver/src/dataprocess/: lipkg.cpp
mcu/pwm/: CMakeLists.txt  pwm.c
mcu/test-sketches/motor-driver/: motor-driver.ino
trilobyte/: CMakeLists.txt  package.xml
trilobyte_base/: CMakeLists.txt  README.MD  package.xml  setup.cfg  setup.py
trilobyte_base/arduino_sketches/trilobyte_esp32/: trilobyte_esp32.ino
trilobyte_base/arduino_sketches/trilobyte_pico/: MotorControl.h  PropulsionControl.h  trilobyte_pico.ino
trilobyte_base/src/: mcu_data_processor.cpp  minimal_cpp_publisher.cpp
trilobyte_base/trilobyte_base/: serial_node.py
trilobyte_bringup/: CMakeLists.txt  package.xml
trilobyte_bringup/launch/: trilobyte.launch.py
trilobyte_description/: CMakeLists.txt  package.xml
trilobyte_description/config/: ekf.yaml
trilobyte_description/launch/: rviz.launch.py
trilobyte_description/meshes/: caster_ball.mtl  trilobyte_base_link.mtl  wheel_left.mtl
trilobyte_description/urdf/: trilobyte.urdf  trilobyte.urdf.xacro  trilobyte_core.xacro
trilobyte_gazebo/: CMakeLists.txt  package.xml
trilobyte_hardware_interface/: CMakeLists.txt  package.xml  trilobyte_hardware_interface.xml
trilobyte_hardware_interface/config/: controller_configuration.yaml
trilobyte_hardware_interface/description/: trilobyte_ros2_control.xacro
trilobyte_hardware_interface/include/trilobyte_hardware_interface/: mcu_communication.h  rs232.h  trilobyte_hardware_interface.cpp  trilobyte_hardware_interface.hpp
trilobyte_hardware_interface/include/trilobyte_hardware_interface/serial/: list_ports_linux.cc  serial.cc
trilobyte_hardware_interface/launch/: trilobyte_hardware_interface.launch.py
trilobyte_hardware_interface/ros2_control/: trilobyte_ros2_control.xacro
trilobyte_hardware_interface/src/: mcu_communication.cpp  rs232.c  trilobyte_hardware_interface.cpp
trilobyte_rviz/: CMakeLists.txt  package.xml  setup.cfg  setup.py
